force-app/main/default/objects/Product__c/fields/Product_Link__c.field-meta.xml
<CustomField>
    <fullName>Product_Link__c</fullName>
    <label>Product Link</label>
    <type>Url</type>
</CustomField>