force-app/main/default/objects/Product__c/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <label>ProductName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>